src/books/snapshots/crypto_orderbook__books__array_orderbook__test__orderbook_metrics.snap
---
source: src/books/array_orderbook.rs
expression: lob.calculate_metrics(5)
---
OrderbookMetrics {
    quote_imbalance: 0.0709918493701786047103639827,
    mid_price: 100.5,
    spread: 1.0,
    spread_percentage: 0.9950248756218905472636815900,
    price_impact_buy: 3.5820895522388059701492537300,
    price_impact_sell: 5.4726368159203980099502487600,
}
