src/books/snapshots/crypto_orderbook__books__array_orderbook__test__quote_imbalance.snap
---
source: src/books/array_orderbook.rs
expression: metrics
---
OrderbookMetrics {
    quote_imbalance: -0.004975124378109452736318408,
    mid_price: 100.50,
    spread: 1,
    spread_percentage: 0.9950248756218905472636815900,
    price_impact_buy: 0.497512437810945273631840800,
    price_impact_sell: 0.497512437810945273631840800,
}
