src/books/snapshots/crypto_orderbook__books__array_orderbook__test__rotating_price-15.snap
---
source: src/books/array_orderbook.rs
expression: ob
---
ArrayOrderbook {
    best_bid: Some(
        Level {
            price: 963.644660940673,
            size: 64.6446609406726,
        },
    ),
    best_ask: Some(
        Level {
            price: 965.644660940673,
            size: 64.6446609406726,
        },
    ),
    bids: Buffer {
        buf: [
            Level {
                price: 963.644660940673,
                size: 64.6446609406726,
            },
            Level {
                price: 952.806023374436,
                size: 53.8060233744357,
            },
            Level {
                price: 949,
                size: 50,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
        ],
        limit: -79228162514264337593543950335,
        len: 3,
        cached_first: Some(
            Level {
                price: 963.644660940673,
                size: 64.6446609406726,
            },
        ),
    },
    asks: Buffer {
        buf: [
            Level {
                price: 965.644660940673,
                size: 64.6446609406726,
            },
            Level {
                price: 981.865828381746,
                size: 80.8658283817455,
            },
            Level {
                price: 1001,
                size: 100,
            },
            Level {
                price: 1020.134171618255,
                size: 119.1341716182545,
            },
            Level {
                price: 1036.355339059327,
                size: 135.3553390593274,
            },
            Level {
                price: 1047.193976625564,
                size: 146.1939766255644,
            },
            Level {
                price: 1051,
                size: 150,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
        ],
        limit: 79228162514264337593543950335,
        len: 7,
        cached_first: Some(
            Level {
                price: 965.644660940673,
                size: 64.6446609406726,
            },
        ),
    },
    ts: 0,
    sequence_id: 0,
    has_moved: false,
}
